Частично сделаны различные состояния элементов.

--- a/hotels.html
+++ b/hotels.html
@@ -39,21 +39,21 @@
         <form class="feature-search-form clearfix" action="#" method="get">
             <fieldset class="infrastructure column">
                 <h3>Инфраструктура:</h3>
-                <input type="checkbox" name="pool" id="pool-field" checked>
-                <label class="icon-check-on" for="pool-field">Бассейн</label>
-                <input type="checkbox" name="parking" id="parking-field">
-                <label class="icon-check-off" for="parking-field">Парковка</label>
+                <input type="checkbox" name="pool" id="pool-field">
+                <label for="pool-field">Бассейн</label>
+                <input type="checkbox" name="parking" id="parking-field" checked>
+                <label for="parking-field">Парковка</label>
                 <input type="checkbox" name="wi-fi" id="wi-fi-field">
-                <label class="icon-check-off" for="wi-fi-field">Wi-fi</label>
+                <label for="wi-fi-field">Wi-fi</label>
             </fieldset>
             <fieldset class="accomodation-type column">
                 <h3>Тип жилья:</h3>
                 <input type="checkbox" name="hotel" id="hotel-field" checked>
-                <label class="icon-check-on" for="hotel-field">Гостиница</label>
+                <label for="hotel-field">Гостиница</label>
                 <input type="checkbox" name="motel" id="motel-field" checked>
-                <label class="icon-check-on" for="motel-field">Мотель</label>
+                <label for="motel-field">Мотель</label>
                 <input type="checkbox" name="apartments" id="apartments-field" checked>
-                <label class="icon-check-on" for="apartments-field">Апартаменты</label>
+                <label for="apartments-field">Апартаменты</label>
             </fieldset>
             <div class="right-column">
                 <fieldset class="price">
