Добавлены состояния элементов. Загружены картинки и иконочный шрифт. Сортировка на hotels.html сделана ссылками. Логотип HTML Academy пришлось переделать: вместо тега img я сделала его как фон, чтобы можно было менять ему цвет.

--- a/hotels.html
+++ b/hotels.html
@@ -85,21 +85,18 @@
     <div class="results clearfix">
         <h4 class="results-count">Найдено: <span>3</span></h4>
         <h5 class="sort">Сортировка:</h5>
-        <input type="checkbox" name="price-sort" id="price-sort">
-        <label for="price-sort">По цене</label>
-        <input type="checkbox" name="type-sort" id="type-sort" checked>
-        <label for="type-sort">По типу</label>
-        <input type="checkbox" name="rating-sort" id="rating-sort" checked>
-        <label for="rating-sort">По рейтингу</label>
+          <a href="#" class="sort-btn active">По цене</a>
+          <a href="#" class="sort-btn">По типу</a>
+        <a href="#" class="sort-btn">По рейтингу</a>
         <i class="icon-up-dir"></i>
-        <i class="icon-down-dir"></i>
+        <i class="icon-down-dir active"></i>
     </div>
     <div class="results-container">
         <div class="hotel">
             <div class="results-hotel clearfix">
                 <img src="./img/hotels-amara-135x90.jpg" alt="Amara Resort & Spa" width="135" height="90">
                 <div class="central-column">
-                    <h4 class="hotel-name">Amara Resort & Spa</h4>
+                    <a href="#" class="hotel-name">Amara Resort & Spa</a>
                     <span class="results-hotel-type">Гостиница</span>
                     <span class="results-price-range">от 3500 Р.</span>
                     <a class="btn btn-more" href="#">Подробнее</a>
@@ -118,7 +115,7 @@
             <div class="results-hotel clearfix">
                 <img src="./img/hotels-desert-135x90.jpg" alt="Desert Quail Inn" width="135" height="90">
                 <div class="central-column">
-                    <h4 class="hotel-name">Desert Quail Inn</h4>
+                    <a href="#" class="hotel-name">Desert Quail Inn</a>
                     <span class="results-hotel-type">Мотель</span>
                     <span class="results-price-range">от 2000 Р.</span>
                     <a class="btn btn-more" href="#">Подробнее</a>
@@ -135,7 +132,7 @@
             <div class="results-hotel clearfix">
                 <img src="./img/hotels-villas-135x90.jpg" alt="Villas at Poco Diablo" width="135" height="90">
                 <div class="central-column">
-                    <h4 class="hotel-name">Villas at Poco Diablo</h4>
+                    <a href="#" class="hotel-name">Villas at Poco Diablo</a>
                     <span class="results-hotel-type">Апартаменты</span>
                     <span class="results-price-range">от 4000 Р.</span>
                     <a class="btn btn-more" href="#">Подробнее</a>
@@ -160,8 +157,7 @@
             </div>
             <div class="footer-copyright">
                 <span class="website">Website by</span>
-                <a href="#">
-                    <img src="img/htmlacademy-logo-113x39.png" alt="HTML Academy" width="113" height="39">
+                <a href="#" class="academy-logo">HTML Academy
                 </a>
             </div>
         </div>
