--- a/index.html
+++ b/index.html
@@ -102,21 +102,21 @@
             <form class="hotel-form clearfix" action="#" method="get">
                 <div class="row row1 clearfix">
                     <label class="column-left" for="date-in">Дата заезда:</label>
-                    <input class="column-right input big" type="text" value="24 апреля 2014" name="date-in" id="date-in">
+                    <input class="column-right input big" type="text" placeholder="24 апреля 2014" name="date-in" id="date-in">
                     <i class="icon-calendar"></i>
                 </div>
                 <div class="row row2 clearfix">
                     <label class="column-left" for="date-out">Дата выезда:</label>
-                    <input class="column-right input big" type="text" value="4 июля 2014" name="date-out" id="date-out">
+                    <input class="column-right input big" type="text" placeholder="4 июля 2014" name="date-out" id="date-out">
                     <i class="icon-calendar"></i>
                 </div>
                 <div class="row row3 clearfix">
                     <label class="column-left" for="adults">Взрослые:</label>
                     <div class="column-right">
-                        <input class="input small adults" type="number" min="1" step="1" value="2" name="adults" id="adults">
+                        <input class="input small adults" type="text" value="2" name="adults" id="adults">
                         <i class="icon-minus icon-minus-adults"></i>
                         <i class="icon-plus icon-plus-adults"></i>
-                        <input class="input small kids" type="number" min="0" step="1" value="0" name="children" id="children">
+                        <input class="input small kids" type="text" value="0" name="children" id="children">
                         <i class="icon-minus icon-minus-kids"></i>
               <i class="icon-plus icon-plus-kids"></i>
                         <label class="label-kids" for="children">Дети:</label>
@@ -138,8 +138,7 @@
             </div>
             <div class="footer-copyright">
                 <span class="website">Website by</span>
-                <a href="#">
-                    <img src="img/htmlacademy-logo-113x39.png" alt="HTML Academy" width="113" height="39">
+                <a href="#" class="academy-logo">HTML Academy
                 </a>
             </div>
         </div>
