--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <section class="search-form">
             <h3 class="search-title">Заинтересовались?</h3>
             <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <div class="hotel-search">Поиск гостиницы в Седоне</div>
+            <button class="hotel-search">Поиск гостиницы в Седоне</button>
             <div class="map"><img src="img/map-768x593.jpg" alt="Карта" width="768" height="593">
             </div>
             <form class="hotel-form clearfix" action="#" method="get">
