--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
         <section class="search-form">
             <h3 class="search-title">Заинтересовались?</h3>
             <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <button class="hotel-search">Поиск гостиницы в Седоне</button>
-            <div class="map"><img src="img/map-768x593.jpg" alt="Карта" width="768" height="593">
+            <button type="submit" class="hotel-search">Поиск гостиницы в Седоне</button>
+            <div class="map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8880955409!2d-112.35544175472498!3d34.85437338104041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C+AZ%2C+USA!5e0!3m2!1sen!2s!4v1446900438167" width="768" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
             <form class="hotel-form clearfix" action="#" method="get">
                 <div class="row row1 clearfix">
@@ -143,5 +143,7 @@
             </div>
         </div>
     </footer>
+    <script src="js/popup.js">
+    </script>
 </body>
 </html>
