Чекбоксы в hotels изменила (прописала им шрифт 'symbols-sedona') и выровняла их. Одинарные кавычки заменила на двойные. .feature-search-form, .reason-1, .reason-2 - прописала background-color

--- a/hotels.html
+++ b/hotels.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Седона</title>
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
                         <div class="range-filter">
                             <div class="price-controls">
                                 <label class="min-price">от
-                                    <input name="min-price" type="text" value="0">
+                                    <input class="input-min-price" name="min-price" type="text" value="0">
                                 </label>
                                 <label class="max-price">до
                                     <input name="max-price" type="text" value="3000">
@@ -94,7 +94,7 @@
     <div class="results-container">
         <div class="hotel">
             <div class="results-hotel clearfix">
-                <img src="./img/hotels-amara-135x90.jpg" alt="Amara Resort & Spa" width="135" height="90">
+                <img src="img/hotels-amara-135x90.jpg" alt="Amara Resort & Spa" width="135" height="90">
                 <div class="central-column">
                     <a href="#" class="hotel-name">Amara Resort & Spa</a>
                     <span class="results-hotel-type">Гостиница</span>
@@ -113,7 +113,7 @@
         </div>
         <div class="hotel">
             <div class="results-hotel clearfix">
-                <img src="./img/hotels-desert-135x90.jpg" alt="Desert Quail Inn" width="135" height="90">
+                <img src="img/hotels-desert-135x90.jpg" alt="Desert Quail Inn" width="135" height="90">
                 <div class="central-column">
                     <a href="#" class="hotel-name">Desert Quail Inn</a>
                     <span class="results-hotel-type">Мотель</span>
@@ -130,7 +130,7 @@
         </div>
         <div class="hotel">
             <div class="results-hotel clearfix">
-                <img src="./img/hotels-villas-135x90.jpg" alt="Villas at Poco Diablo" width="135" height="90">
+                <img src="img/hotels-villas-135x90.jpg" alt="Villas at Poco Diablo" width="135" height="90">
                 <div class="central-column">
                     <a href="#" class="hotel-name">Villas at Poco Diablo</a>
                     <span class="results-hotel-type">Апартаменты</span>
