--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <title>Седона</title>
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/normalize.css">
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" >
 </head>
 
 <body>
@@ -38,7 +38,7 @@
     <div class="container">
         <div class="container-content">
             <figure class="big-logo">
-                <img src="./img/background-text%20458x352.png" alt="Welcome to the gorgeous Sedona" width="456" height="352">
+                <img src="img/background-text%20458x352.png" alt="Welcome to the gorgeous Sedona" width="456" height="352">
             </figure>
         </div>
         <section class="reasons">
@@ -95,7 +95,7 @@
         </section>
         <section class="search-form">
             <h3 class="search-title">Заинтересовались?</h3>
-            <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <button type="submit" class="hotel-search">Поиск гостиницы в Седоне</button>
             <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8880955409!2d-112.35544175472498!3d34.85437338104041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C+AZ%2C+USA!5e0!3m2!1sen!2s!4v1446900438167" width="768" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
