--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js">
 
 <head>
     <meta charset="utf-8">
     <title>Седона</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=latin,cyrillic" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css" >
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css">
+    <noscript>
+      <link rel="stylesheet" href="css/noscript.css">
+    </noscript>
 </head>
 
 <body>
@@ -96,9 +99,10 @@
         <section class="search-form">
             <h3 class="search-title">Заинтересовались?</h3>
             <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <button type="submit" class="hotel-search">Поиск гостиницы в Седоне</button>
+            <a class="hotel-search" href="/hotel-search.html">Поиск гостиницы в Седоне</a>
             <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8880955409!2d-112.35544175472498!3d34.85437338104041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C+AZ%2C+USA!5e0!3m2!1sen!2s!4v1446900438167" width="768" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8880955409!2d-112.35544175472498!3d34.85437338104041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C+AZ%2C+USA!5e0!3m2!1sen!2s!4v1446900438167" width="768" height="593" style="border:0" allowfullscreen></iframe>
+                <img class="map-jpeg" src="img/map-768x593.jpg" width="768" height="593" alt="Седона, штат Аризона, США">
             </div>
             <form class="hotel-form clearfix" action="#" method="get">
                 <div class="row row1 clearfix">
@@ -144,7 +148,11 @@
             </div>
         </div>
     </footer>
-    <script src="js/popup.js">
+    <script src="js/popup.min.js">
+    </script>
+    <script>
+      var html = document.documentElement;
+      html.className = html.className.replace("no-js","js");
     </script>
 </body>
 
