Исправлены чекбоксы на внутренней странице. Поправлено расположение текста в полях ввода дат в форме поиска гостиниц на главной странице. Исправлена ссылка с кнопки поиска гостиниц на главной странице на отдельную страницу с поиском (при неработающем js). Исправлено изображение карты при неработающей ссылке на интерактивную карту google.

--- a/hotel-search.html
+++ b/hotel-search.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Седона</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css" >
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.min.css" >
 </head>
 
 <body>
@@ -38,12 +38,12 @@
     <form class="hotel-form inner-form clearfix" action="#" method="get">
                 <div class="row row1 clearfix">
                     <label class="column-left" for="date-in">Дата заезда:</label>
-                    <input class="column-right input big" type="text" placeholder="24 апреля 2014" name="date-in" id="date-in">
+                    <input class="column-right input big date-in" type="text" placeholder="24 апреля 2014" name="date-in" id="date-in">
                     <i class="icon-calendar"></i>
                 </div>
                 <div class="row row2 clearfix">
                     <label class="column-left" for="date-out">Дата выезда:</label>
-                    <input class="column-right input big" type="text" placeholder="4 июля 2014" name="date-out" id="date-out">
+                    <input class="column-right input big date-out" type="text" placeholder="4 июля 2014" name="date-out" id="date-out">
                     <i class="icon-calendar"></i>
                 </div>
                 <div class="row row3 clearfix">
