--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <section class="search-form">
             <h3 class="search-title">Заинтересовались?</h3>
             <p>Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="hotel-search" href="/hotel-search.html">Поиск гостиницы в Седоне</a>
+            <a class="hotel-search" href="hotel-search.html">Поиск гостиницы в Седоне</a>
             <div class="map">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8880955409!2d-112.35544175472498!3d34.85437338104041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C+AZ%2C+USA!5e0!3m2!1sen!2s!4v1446900438167" width="768" height="593" style="border:0" allowfullscreen></iframe>
                 <img class="map-jpeg" src="img/map-768x593.jpg" width="768" height="593" alt="Седона, штат Аризона, США">
@@ -107,12 +107,12 @@
             <form class="hotel-form clearfix" action="#" method="get">
                 <div class="row row1 clearfix">
                     <label class="column-left" for="date-in">Дата заезда:</label>
-                    <input class="column-right input big" type="text" placeholder="24 апреля 2014" name="date-in" id="date-in">
+                    <input class="column-right input big date-in" type="text" placeholder="24 апреля 2014" name="date-in" id="date-in">
                     <i class="icon-calendar"></i>
                 </div>
                 <div class="row row2 clearfix">
                     <label class="column-left" for="date-out">Дата выезда:</label>
-                    <input class="column-right input big" type="text" placeholder="4 июля 2014" name="date-out" id="date-out">
+                    <input class="column-right input big date-out" type="text" placeholder="4 июля 2014" name="date-out" id="date-out">
                     <i class="icon-calendar"></i>
                 </div>
                 <div class="row row3 clearfix">
